--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,12 @@
  */
 
 buildscript {
-    ext.kotlin_version = '1.5.0-RC'
+    ext.kotlin_version = '1.5.31'
     repositories {
         mavenLocal()
-        jcenter()
-        maven { url "https://plugins.gradle.org/m2/" }
         google()
+        mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
@@ -38,7 +38,6 @@ allprojects {
         mavenLocal()
         mavenCentral()
         maven { url "https://jitpack.io" }
-        maven { url "https://dl.bintray.com" }
         maven { url "https://plugins.gradle.org/m2/" }
         google()
     }
